phase_3/kubernetes_config/problem_1.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: prob1-deployment
  labels:
    app: prob1
spec:
  replicas: 3
  selector:
    matchLabels:
      app: prob1
  template:
    metadata:
      labels:
        app: prob1
    spec:
      containers:
      - name: phase-3-prob-1
        image: pad2003/phase_3_prob_1:v1
        ports:
        - containerPort: 5040
        # volumeMounts:
        # - name: prob1-captured-data
        #   mountPath: problem_1/data/captured_data/phase-3/prob-1
        resources:
          requests:
            memory: "50Mi"
            cpu: "500m" 
          limits:
            memory: "500Mi"
            cpu: "2000m"
---
apiVersion: v1
kind: Service
metadata:
  name: prob1-service
spec:
  selector:
    app: prob1
  ports:
    - protocol: TCP
      port: 80
      targetPort: 5040
