phase_3/kubernetes_config/problem_2.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: prob2-deployment
  labels:
    app: prob2
spec:
  replicas: 3
  selector:
    matchLabels:
      app: prob2
  template:
    metadata:
      labels:
        app: prob2
    spec:
      containers:
      - name: phase-3-prob-2
        image: pad2003/phase_3_prob_2:v1
        ports:
        - containerPort: 5040
        volumeMounts:
        - name: prob2-captured-data
          mountPath: problem_2/data/captured_data/phase-3/prob-2
        resources:
          requests:
            memory: "50Mi"
            cpu: "500m" 
          limits:
            memory: "500Mi"
            cpu: "2000m"
---
apiVersion: v1
kind: Service
metadata:
  name: prob2-service
spec:
  selector:
    app: prob2
  ports:
    - protocol: TCP
      port: 80
      targetPort: 5040
